layout/generic/nsTextFrame.cpp
@@ -1774,12 +1774,10 @@ GetFontGroupForFrame(nsIFrame* aFrame, float aFontSizeInflation,
 }
 
 static already_AddRefed<gfxContext>
-GetReferenceRenderingContext(nsTextFrame* aTextFrame)
+CreateReferenceThebesContext(nsTextFrame* aTextFrame)
 {
   nsRefPtr<nsRenderingContext> tmp =
-    aTextFrame->PresContext()->PresShell()->GetReferenceRenderingContext();
-  if (!tmp)
-    return nullptr;
+    aTextFrame->PresContext()->PresShell()->CreateReferenceRenderingContext();
 
   nsRefPtr<gfxContext> ctx = tmp->ThebesContext();
   return ctx.forget();
@@ -1793,7 +1791,7 @@ GetHyphenTextRun(gfxTextRun* aTextRun, gfxContext* aContext, nsTextFrame* aTextF
 {
   nsRefPtr<gfxContext> ctx = aContext;
   if (!ctx) {
-    ctx = GetReferenceRenderingContext(aTextFrame);
+    ctx = CreateReferenceThebesContext(aTextFrame);
   }
   if (!ctx)
     return nullptr;
@@ -2556,7 +2554,7 @@ nsTextFrame::EnsureTextRun(TextRunType aWhichTextRun,
   } else {
     nsRefPtr<gfxContext> ctx = aReferenceContext;
     if (!ctx) {
-      ctx = GetReferenceRenderingContext(this);
+      ctx = CreateReferenceThebesContext(this);
     }
     if (ctx) {
       BuildTextRuns(ctx, this, aLineContainer, aLine, aWhichTextRun);
@@ -2838,7 +2836,7 @@ public:
   }
 
   virtual already_AddRefed<gfxContext> GetContext() {
-    return GetReferenceRenderingContext(GetFrame());
+    return CreateReferenceThebesContext(GetFrame());
   }
 
   virtual uint32_t GetAppUnitsPerDevUnit() {
